--- a/about-us.html
+++ b/about-us.html
@@ -16,7 +16,7 @@
       <nav class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item"><a href="./index.html">Home</a></li>
-          <li class="navigation__item"><a href="#">About us</a></li>
+          <li class="navigation__item"><a href="./about-us.html">About us</a></li>
           <li class="navigation__item"><a href="#">Services</a></li>
           <li class="navigation__item"><a href="#">Our Team</a></li>
           <li class="navigation__item">
@@ -140,7 +140,7 @@
     
     <section class="about-me__fourth-section">
         <p class="secondary__section--subheading">Testimonial</p>
-        <p class="secondary__section--heading">Our clients say</p>
+        <p class="secondary__section--heading about-me__fourth-section--heading">Our clients say</p>
 
 
         <div class="slider">
