--- a/contact-page.html
+++ b/contact-page.html
@@ -28,7 +28,7 @@
       <nav class="navigation__nav">
         <ul class="navigation__list">
           <li class="navigation__item"><a href="./index.html">Home</a></li>
-          <li class="navigation__item"><a href="#">About us</a></li>
+          <li class="navigation__item"><a href="./about-us.html">About us</a></li>
           <li class="navigation__item"><a href="#">Services</a></li>
           <li class="navigation__item"><a href="#">Our Team</a></li>
           <li class="navigation__item"><a href="./contact-page.html">Contact</a></li>
