--- a/contact-page.html
+++ b/contact-page.html
@@ -32,6 +32,7 @@
           <li class="navigation__item"><a href="#">Services</a></li>
           <li class="navigation__item"><a href="#">Our Team</a></li>
           <li class="navigation__item"><a href="./contact-page.html">Contact</a></li>
+          <li class="navigation__item"><a href="./gallery.html">Gallery</a></li>
         </ul>
       </nav>
 
