--- a/gallery.html
+++ b/gallery.html
@@ -1,86 +1,196 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
     <header>
-        <div class="navigation__logo">
-          <p>Ginyard Gym</p>
-        </div>
-        <nav class="navigation__nav">
-          <ul class="navigation__list">
-            <li class="navigation__item"><a href="./index.html">Home</a></li>
-            <li class="navigation__item"><a href="./about-us.html">About us</a></li>
-            <li class="navigation__item"><a href="#">Services</a></li>
-            <li class="navigation__item"><a href="#">Our Team</a></li>
-            <li class="navigation__item"><a href="./contact-page.html">Contact</a></li>
-          </ul>
-        </nav>
-  
-        <ul class="navigation-social">
-          <li>
-            <a href="#"
-              ><img
-                src="./assests/imgs/facebook.svg"
-                alt="Facebook"
-                class="navigation-social--icon"
-            /></a>
+      <div class="navigation__logo">
+        <p>Ginyard Gym</p>
+      </div>
+      <nav class="navigation__nav">
+        <ul class="navigation__list">
+          <li class="navigation__item"><a href="./index.html">Home</a></li>
+          <li class="navigation__item">
+            <a href="./about-us.html">About us</a>
           </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./assests/imgs/instagram.svg"
-                alt="Instagram"
-                class="navigation-social--icon"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./assests/imgs/twitter.svg"
-                alt="Twitter"
-                class="navigation-social--icon"
-            /></a>
-          </li>
-          <li>
-            <a href="#"
-              ><img
-                src="./assests/imgs/youtube.svg"
-                alt="Youtube"
-                class="navigation-social--icon"
-            /></a>
+          <li class="navigation__item"><a href="#">Services</a></li>
+          <li class="navigation__item"><a href="#">Our Team</a></li>
+          <li class="navigation__item">
+            <a href="./contact-page.html">Contact</a>
           </li>
         </ul>
-      </header>
+      </nav>
+
+      <ul class="navigation-social">
+        <li>
+          <a href="#"
+            ><img
+              src="./assests/imgs/facebook.svg"
+              alt="Facebook"
+              class="navigation-social--icon"
+          /></a>
+        </li>
+        <li>
+          <a href="#"
+            ><img
+              src="./assests/imgs/instagram.svg"
+              alt="Instagram"
+              class="navigation-social--icon"
+          /></a>
+        </li>
+        <li>
+          <a href="#"
+            ><img
+              src="./assests/imgs/twitter.svg"
+              alt="Twitter"
+              class="navigation-social--icon"
+          /></a>
+        </li>
+        <li>
+          <a href="#"
+            ><img
+              src="./assests/imgs/youtube.svg"
+              alt="Youtube"
+              class="navigation-social--icon"
+          /></a>
+        </li>
+      </ul>
+    </header>
+
+    <main>
       <section class="about-me__first-section">
         <h1 class="about-me__first-section--header">Gallery</h1>
       </section>
 
       <section class="gallery_second-section gallery">
         <figure class="gallery__item gallery__item--1">
-            <img src="./assests/imgs/pexels-ivan-samkov-4162485.jpg" class="gallery__img" alt="Image 1">
-          </figure>
-          <figure class="gallery__item gallery__item--2">
-            <img src="./assests/imgs/pexels-max-rahubovskiy-7031717.jpg" class="gallery__img" alt="Image 2">
-          </figure>
-          <figure class="gallery__item gallery__item--3">
-            <img src="./assests/imgs/pexels-ivan-samkov-4164761.jpg" class="gallery__img" alt="Image 3">
-          </figure>
-          <figure class="gallery__item gallery__item--4">
-            <img src="./assests/imgs/pexels-cesar-galeão-3289711.jpg" class="gallery__img" alt="Image 4">
-          </figure>
-          <figure class="gallery__item gallery__item--5">
-            <img src="./assests/imgs/pexels-alesia-kozik-7289248.jpg" class="gallery__img" alt="Image 5">
-          </figure>
-          <figure class="gallery__item gallery__item--6">
-            <img src="./assests/imgs/pexels-ivan-samkov-4164844.jpg" class="gallery__img" alt="Image 6">
-          </figure>
-         
+          <img
+            src="./assests/imgs/pexels-ivan-samkov-4162485.jpg"
+            class="gallery__img"
+            alt="Image 1"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--2">
+          <img
+            src="./assests/imgs/pexels-max-rahubovskiy-7031717.jpg"
+            class="gallery__img"
+            alt="Image 2"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--3">
+          <img
+            src="./assests/imgs/pexels-ivan-samkov-4164761.jpg"
+            class="gallery__img"
+            alt="Image 3"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--4">
+          <img
+            src="./assests/imgs/pexels-cesar-galeão-3289711.jpg"
+            class="gallery__img"
+            alt="Image 4"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--5">
+          <img
+            src="./assests/imgs/pexels-alesia-kozik-7289248.jpg"
+            class="gallery__img"
+            alt="Image 5"
+          />
+        </figure>
+        <figure class="gallery__item gallery__item--6">
+          <img
+            src="./assests/imgs/pexels-ivan-samkov-4164844.jpg"
+            class="gallery__img"
+            alt="Image 6"
+          />
+        </figure>
       </section>
-</body>
+      
+      <section class="sixth__section">
+        <div class="sixth__section--contact-me">
+          <div>
+            <img
+              src="./assests/imgs/location-pin-svgrepo-com.svg"
+              alt="Location"
+              class="contact-me__icons"
+            />
+            <p class="contact-me__description">Str. Libertatii nr.6, Iasi</p>
+          </div>
+
+          <div>
+            <img
+              src="./assests/imgs/phone-svgrepo-com.svg"
+              alt="Phone"
+              class="contact-me__icons"
+            />
+            <p class="contact-me__description">0335 123 456</p>
+          </div>
+
+          <div>
+            <img
+              src="./assests/imgs/mail-svgrepo-com.svg"
+              alt="Phone"
+              class="contact-me__icons"
+            />
+            <p class="contact-me__description">support.ginyard@gmail.com</p>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <footer>
+      <div>
+        <p class="footer-logo">Ginyard Gym</p>
+        <div class="footer-description">
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore dolore magna aliqua endisse
+          ultrices gravida lorem.
+        </div>
+      </div>
+
+      <div class="footer-links">
+        <p class="footer-title">Useful links</p>
+        <ul>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Our Blog</a></li>
+          <li><a href="#">Our Classes</a></li>
+          <li><a href="#">Contact us</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-links">
+        <p class="footer-title">Support</p>
+        <ul>
+          <li><a href="#">Login</a></li>
+          <li><a href="#">My account</a></li>
+          <li><a href="#">Subscribe</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
+
+      <div class="footer-links">
+        <p class="footer-title">Tips & Guides</p>
+        <ul>
+          <li>
+            <a href="#"
+              >Physical fitness may help prevent depression, anxiety</a
+            >
+          </li>
+          <li><a href="#">The best exercise to lose belly fat</a></li>
+          <li>
+            <a href="#">27 Best Dumbbell Exercises for Building Muscle</a>
+          </li>
+          <li>
+            <a href="#">10 Best Chest Workout Exercises for Building Muscle</a>
+          </li>
+        </ul>
+      </div>
+    </footer>
+  </body>
 </html>
