--- a/about-us.html
+++ b/about-us.html
@@ -17,8 +17,8 @@
         <ul class="navigation__list">
           <li class="navigation__item"><a href="./index.html">Home</a></li>
           <li class="navigation__item"><a href="./about-us.html">About us</a></li>
-          <li class="navigation__item"><a href="#">Services</a></li>
-          <li class="navigation__item"><a href="#">Our Team</a></li>
+          <li class="navigation__item"><a href="./services.html">Services</a></li>
+          <li class="navigation__item"><a href="./our-team.html">Our Team</a></li>
           <li class="navigation__item">
             <a href="./contact-page.html">Contact</a>
           </li>
