--- a/gallery.html
+++ b/gallery.html
@@ -18,11 +18,16 @@
           <li class="navigation__item">
             <a href="./about-us.html">About us</a>
           </li>
-          <li class="navigation__item"><a href="#">Services</a></li>
-          <li class="navigation__item"><a href="#">Our Team</a></li>
+          <li class="navigation__item">
+            <a href="./services.html">Services</a>
+          </li>
+          <li class="navigation__item">
+            <a href="./our-team.html">Our Team</a>
+          </li>
           <li class="navigation__item">
             <a href="./contact-page.html">Contact</a>
           </li>
+          <li class="navigation__item"><a href="./gallery.html">Gallery</a></li>
         </ul>
       </nav>
 
@@ -111,7 +116,7 @@
           />
         </figure>
       </section>
-      
+
       <section class="sixth__section">
         <div class="sixth__section--contact-me">
           <div>
