--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                 laboriosam rem adipisci voluptates cumque, veritatis atque
                 nostrum corrupti ipsa asperiores harum? Dicta odio aut hic.
               </p>
-              <a href="#" class="button">
+              <a href="#" class="findout_button">
                 Find out more
                 <span class="material-symbols-outlined"> &rarr; </span>
               </a>
@@ -216,7 +216,7 @@
           </div>
         </div>
 
-        <button class="second-button btn-white"><span>See more</span></button>
+        <button class="second-button btn-white "><span>See more</span></button>
       </section>
 
       <section class="fourth__section">
@@ -232,7 +232,7 @@
         </div>
         <div class="fourth__section-content">
           <h1 class="fourth__section--header">Be part of our community</h1>
-          <button class="second-button btn-white"><span>Join Now</span></button>
+          <button class="btn btn-white"><span>Join Now</span></button>
         </div>
       </section>
 
@@ -269,7 +269,7 @@
                   <p class="card__price-value">$297</p>
                 </div>
 
-                <button class="second-button btn-white"><span>Join Now</span></button>
+                <button class="btn btn-white"><span>Join Now</span></button>
               </div>
             </div>
           </div>
@@ -300,7 +300,7 @@
                   <p class="card__price-value">$197</p>
                 </div>
 
-                <button class="second-button btn-white"><span>Join Now</span></button>
+                <button class="btn btn-white"><span>Join Now</span></button>
               </div>
             </div>
           </div>
@@ -331,7 +331,7 @@
                   <p class="card__price-value">$57</p>
                 </div>
 
-                <button class="second-button btn-white"><span>Join Now</span></button>
+                <button class="btn btn-white"><span>Join Now</span></button>
               </div>
             </div>
           </div>
