--- a/gallery.html
+++ b/gallery.html
@@ -9,64 +9,63 @@
   </head>
   <body>
     <header>
-      <div class="navigation__logo">
-        <p>Ginyard Gym</p>
-      </div>
+    
       <nav class="navigation__nav">
+        <div class="navigation__logo">
+            <p>Ginyard Gym</p>
+          </div>
+
         <ul class="navigation__list">
           <li class="navigation__item"><a href="./index.html">Home</a></li>
           <li class="navigation__item">
             <a href="./about-us.html">About us</a>
           </li>
-          <li class="navigation__item">
-            <a href="./services.html">Services</a>
-          </li>
-          <li class="navigation__item">
-            <a href="./our-team.html">Our Team</a>
-          </li>
+          <li class="navigation__item"><a href="./services.html">Services</a></li>
+          <li class="navigation__item"><a href="./our-team.html">Our Team</a></li>
           <li class="navigation__item">
             <a href="./contact-page.html">Contact</a>
           </li>
           <li class="navigation__item"><a href="./gallery.html">Gallery</a></li>
         </ul>
+
+        <ul class="navigation-social">
+            <li>
+              <a href="#"
+                ><img
+                  src="./assests/imgs/facebook.svg"
+                  alt="Facebook"
+                  class="navigation-social--icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./assests/imgs/instagram.svg"
+                  alt="Instagram"
+                  class="navigation-social--icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./assests/imgs/twitter.svg"
+                  alt="Twitter"
+                  class="navigation-social--icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./assests/imgs/youtube.svg"
+                  alt="Youtube"
+                  class="navigation-social--icon"
+              /></a>
+            </li>
+          </ul>
       </nav>
 
-      <ul class="navigation-social">
-        <li>
-          <a href="#"
-            ><img
-              src="./assests/imgs/facebook.svg"
-              alt="Facebook"
-              class="navigation-social--icon"
-          /></a>
-        </li>
-        <li>
-          <a href="#"
-            ><img
-              src="./assests/imgs/instagram.svg"
-              alt="Instagram"
-              class="navigation-social--icon"
-          /></a>
-        </li>
-        <li>
-          <a href="#"
-            ><img
-              src="./assests/imgs/twitter.svg"
-              alt="Twitter"
-              class="navigation-social--icon"
-          /></a>
-        </li>
-        <li>
-          <a href="#"
-            ><img
-              src="./assests/imgs/youtube.svg"
-              alt="Youtube"
-              class="navigation-social--icon"
-          /></a>
-        </li>
-      </ul>
+     
     </header>
-
     <main>
       <section class="about-me__first-section">
         <h1 class="about-me__first-section--header">Gallery</h1>
