--- a/our-team.html
+++ b/our-team.html
@@ -9,10 +9,12 @@
   </head>
   <body>
     <header>
-      <div class="navigation__logo">
-        <p>Ginyard Gym</p>
-      </div>
+    
       <nav class="navigation__nav">
+        <div class="navigation__logo">
+            <p>Ginyard Gym</p>
+          </div>
+
         <ul class="navigation__list">
           <li class="navigation__item"><a href="./index.html">Home</a></li>
           <li class="navigation__item">
@@ -25,42 +27,44 @@
           </li>
           <li class="navigation__item"><a href="./gallery.html">Gallery</a></li>
         </ul>
+
+        <ul class="navigation-social">
+            <li>
+              <a href="#"
+                ><img
+                  src="./assests/imgs/facebook.svg"
+                  alt="Facebook"
+                  class="navigation-social--icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./assests/imgs/instagram.svg"
+                  alt="Instagram"
+                  class="navigation-social--icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./assests/imgs/twitter.svg"
+                  alt="Twitter"
+                  class="navigation-social--icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./assests/imgs/youtube.svg"
+                  alt="Youtube"
+                  class="navigation-social--icon"
+              /></a>
+            </li>
+          </ul>
       </nav>
 
-      <ul class="navigation-social">
-        <li>
-          <a href="#"
-            ><img
-              src="./assests/imgs/facebook.svg"
-              alt="Facebook"
-              class="navigation-social--icon"
-          /></a>
-        </li>
-        <li>
-          <a href="#"
-            ><img
-              src="./assests/imgs/instagram.svg"
-              alt="Instagram"
-              class="navigation-social--icon"
-          /></a>
-        </li>
-        <li>
-          <a href="#"
-            ><img
-              src="./assests/imgs/twitter.svg"
-              alt="Twitter"
-              class="navigation-social--icon"
-          /></a>
-        </li>
-        <li>
-          <a href="#"
-            ><img
-              src="./assests/imgs/youtube.svg"
-              alt="Youtube"
-              class="navigation-social--icon"
-          /></a>
-        </li>
-      </ul>
+     
     </header>
 
     <main>
@@ -277,7 +281,7 @@
         </div>
         <div class="fourth__section-content">
           <h1 class="fourth__section--header">Be part of our community</h1>
-          <button class="second-button btn-white"><span>Join Now</span></button>
+          <button class="btn btn-white"><span>Join Now</span></button>
         </div>
       </section>
 
