--- a/services.html
+++ b/services.html
@@ -11,10 +11,12 @@
   </head>
   <body>
     <header>
-      <div class="navigation__logo">
-        <p>Ginyard Gym</p>
-      </div>
+    
       <nav class="navigation__nav">
+        <div class="navigation__logo">
+            <p>Ginyard Gym</p>
+          </div>
+
         <ul class="navigation__list">
           <li class="navigation__item"><a href="./index.html">Home</a></li>
           <li class="navigation__item">
@@ -27,42 +29,44 @@
           </li>
           <li class="navigation__item"><a href="./gallery.html">Gallery</a></li>
         </ul>
+
+        <ul class="navigation-social">
+            <li>
+              <a href="#"
+                ><img
+                  src="./assests/imgs/facebook.svg"
+                  alt="Facebook"
+                  class="navigation-social--icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./assests/imgs/instagram.svg"
+                  alt="Instagram"
+                  class="navigation-social--icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./assests/imgs/twitter.svg"
+                  alt="Twitter"
+                  class="navigation-social--icon"
+              /></a>
+            </li>
+            <li>
+              <a href="#"
+                ><img
+                  src="./assests/imgs/youtube.svg"
+                  alt="Youtube"
+                  class="navigation-social--icon"
+              /></a>
+            </li>
+          </ul>
       </nav>
 
-      <ul class="navigation-social">
-        <li>
-          <a href="#"
-            ><img
-              src="./assests/imgs/facebook.svg"
-              alt="Facebook"
-              class="navigation-social--icon"
-          /></a>
-        </li>
-        <li>
-          <a href="#"
-            ><img
-              src="./assests/imgs/instagram.svg"
-              alt="Instagram"
-              class="navigation-social--icon"
-          /></a>
-        </li>
-        <li>
-          <a href="#"
-            ><img
-              src="./assests/imgs/twitter.svg"
-              alt="Twitter"
-              class="navigation-social--icon"
-          /></a>
-        </li>
-        <li>
-          <a href="#"
-            ><img
-              src="./assests/imgs/youtube.svg"
-              alt="Youtube"
-              class="navigation-social--icon"
-          /></a>
-        </li>
-      </ul>
+     
     </header>
 
     <main>
@@ -103,7 +107,7 @@
                   <p class="card__price-value">$297</p>
                 </div>
 
-                <button class="second-button btn-white">
+                <button class="btn btn-white">
                   <span>Join Now</span>
                 </button>
               </div>
@@ -136,7 +140,7 @@
                   <p class="card__price-value">$197</p>
                 </div>
 
-                <button class="second-button btn-white">
+                <button class="btn btn-white">
                   <span>Join Now</span>
                 </button>
               </div>
@@ -169,7 +173,7 @@
                   <p class="card__price-value">$57</p>
                 </div>
 
-                <button class="second-button btn-white">
+                <button class="btn btn-white">
                   <span>Join Now</span>
                 </button>
               </div>
