--- a/services.html
+++ b/services.html
@@ -7,23 +7,38 @@
     <title>Services</title>
     <link rel="stylesheet" href="style.css" />
     <script src="https://kit.fontawesome.com/76f01453e1.js" crossorigin="anonymous"></script>
+    <script defer  src="navigation.js"></script>
     <script defer src="./services.js"></script>
+
   </head>
   <body>
     <header>
-    
       <nav class="navigation__nav">
         <div class="navigation__logo">
-            <p>Ginyard Gym</p>
-          </div>
-
-        <ul class="navigation__list">
+          <p>Ginyard Gym</p>
+        </div>
+        <button
+          class="mobile-nav-toggle"
+          aria-controls="primary-navigation"
+          aria-expanded="false"
+        >
+          <span class="sr-only">Menu</span>
+        </button>
+        <ul
+          class="navigation__list primary-navigation"
+          data-visible="false"
+          id="primary-navigation"
+        >
           <li class="navigation__item"><a href="./index.html">Home</a></li>
           <li class="navigation__item">
             <a href="./about-us.html">About us</a>
           </li>
-          <li class="navigation__item"><a href="./services.html">Services</a></li>
-          <li class="navigation__item"><a href="./our-team.html">Our Team</a></li>
+          <li class="navigation__item">
+            <a href="./services.html">Services</a>
+          </li>
+          <li class="navigation__item">
+            <a href="./our-team.html">Our Team</a>
+          </li>
           <li class="navigation__item">
             <a href="./contact-page.html">Contact</a>
           </li>
@@ -31,42 +46,40 @@
         </ul>
 
         <ul class="navigation-social">
-            <li>
-              <a href="#"
-                ><img
-                  src="./assests/imgs/facebook.svg"
-                  alt="Facebook"
-                  class="navigation-social--icon"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img
-                  src="./assests/imgs/instagram.svg"
-                  alt="Instagram"
-                  class="navigation-social--icon"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img
-                  src="./assests/imgs/twitter.svg"
-                  alt="Twitter"
-                  class="navigation-social--icon"
-              /></a>
-            </li>
-            <li>
-              <a href="#"
-                ><img
-                  src="./assests/imgs/youtube.svg"
-                  alt="Youtube"
-                  class="navigation-social--icon"
-              /></a>
-            </li>
-          </ul>
+          <li>
+            <a href="#"
+              ><img
+                src="./assests/imgs/facebook.svg"
+                alt="Facebook"
+                class="navigation-social--icon"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img
+                src="./assests/imgs/instagram.svg"
+                alt="Instagram"
+                class="navigation-social--icon"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img
+                src="./assests/imgs/twitter.svg"
+                alt="Twitter"
+                class="navigation-social--icon"
+            /></a>
+          </li>
+          <li>
+            <a href="#"
+              ><img
+                src="./assests/imgs/youtube.svg"
+                alt="Youtube"
+                class="navigation-social--icon"
+            /></a>
+          </li>
+        </ul>
       </nav>
-
-     
     </header>
 
     <main>
